--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.frep</groupId>
-    <artifactId>thotpatrol</artifactId>
+    <artifactId>ThotPatrol</artifactId>
     <version>1.3.0</version>
     <packaging>jar</packaging>
 
